# tsdb-engine

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Admin.vue  AlertEvents.vue  Alerts.vue  Dashboard.vue  Explore.vue  QueryWorkbench.vue
src/: main.rs  model.rs
src/alert/: engine.rs  event.rs  handlers.rs  mod.rs  notifier.rs  rule.rs
src/api/: handlers.rs  routes.rs
src/config/: mod.rs
src/engine/: active_block.rs  compaction.rs  downsample.rs  mod.rs  ttl.rs
src/engine/block/: mod.rs
src/engine/encoding/: bit_reader.rs  bit_writer.rs  delta_of_delta.rs  mod.rs  varint.rs  xor.rs  zigzag.rs
src/engine/index/: dictionary.rs  inverted.rs  mod.rs  time_index.rs
src/engine/query/: aggregation.rs  executor.rs  group_by.rs  mod.rs
src/engine/wal/: mod.rs
