[package]
name = "tsdb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
crc32fast = "1"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "6"
chrono = "0.4"
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
uuid = { version = "1", features = ["v4"] }
